@@ -1,7 +1,6 @@
 package com.example.expertsystem;
 
 import android.content.Context;
-import android.content.SharedPreferences;
 import android.location.Address;
 import android.location.Geocoder;
 import android.util.Log;
@@ -19,40 +18,44 @@ import com.example.expertsystem.processor.UserFeelingsProcessor;
 import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class ExpertSystem {
     private static final String TAG = ExpertSystem.class.getName();
+    private static final String FORMAT = "%s: %.1f";
+    private static final String PHONE_ACTIVITY_RESULT = "phoneActivityResult";
+    private static final String PHONE_LOCALIZATION_PROCESSOR_RESULT = "phoneLocalizationProcessorResult";
+    private static final String FITBIT_STEPS_RESULT = "fitbitStepsResult";
+    private static final String FITBIT_SPO2_RESULT = "fitbitSpO2Result";
+    private static final String USER_FEELINGS_RESULT = "userFeelingsResult";
     private final AppDatabase database;
     private final Context context;
     private final DataExtractor extractor;
-    private final SharedPreferences sharPref;
 
     public ExpertSystem(Context context) {
         this.context = context;
         database = AppDatabase.getDatabaseInstance(context);
         extractor = new DataExtractor(database);
-        sharPref = context.getSharedPreferences(context.getString(R.string.opium_preferences), Context.MODE_PRIVATE);
     }
 
-    public void launch(ExpertSystemLevel level) {
+    public void launch(ExpertSystemLevel level) throws ResourceNotFoundException {
         try {
             Map<String, Double> paResults = getPhoneActivityResults(level);
             Map<String, Double> fitbitResults = getFitbitResults(level);
             Map<String, Double> uaResults = getUserActivityResults();
             Double finalResult = calculateFinalResult(paResults, fitbitResults, uaResults);
-            String string = sharPref.getString(context.getString(com.example.database.R.string.fitbit_switch_state), "false");
 
             ExpertSystemResult result = new ExpertSystemResult(null, LocalDate.now(), LocalTime.now(),
-                    paResults.get("phoneLocalizationProcessorResult"), paResults.get("phoneActivityResult"),
-                    fitbitResults.get("fitbitStepsResult"), fitbitResults.get("fitbitSpO2Result"),
-                    uaResults.get("userFeelingsResult"), finalResult);
+                    paResults.get(PHONE_ACTIVITY_RESULT), paResults.get(PHONE_LOCALIZATION_PROCESSOR_RESULT),
+                    fitbitResults.get(FITBIT_STEPS_RESULT), fitbitResults.get(FITBIT_SPO2_RESULT),
+                    uaResults.get(USER_FEELINGS_RESULT), finalResult);
 
             ExpertSystemResultDao dao = database.expertSystemResultDao();
-            if (dao.getNewestByDate(LocalDate.now()).isPresent()) {
+            if (dao.getByDate(LocalDate.now()).isPresent()) {
+                ExpertSystemResult expertSystemResult = dao.getByDate(LocalDate.now()).get();
+                result.setId(expertSystemResult.getId());
                 dao.update(result);
             } else {
                 dao.insert(result);
@@ -62,34 +65,29 @@ public class ExpertSystem {
         }
     }
 
-    public Map<String, Double> getPhoneActivityResults(ExpertSystemLevel level) throws IOException {
+    public Map<String, Double> getPhoneActivityResults(ExpertSystemLevel level) throws IOException, ResourceNotFoundException {
         Double phoneLocalizationProcessorResult = getPhoneLocalizationResult();
 
         Integer amountOfNotedMovements = extractor.extractAmountOfNotedMovements(level);
         PhoneActivityProcessor phoneActivityProcessor = new PhoneActivityProcessor(amountOfNotedMovements, phoneLocalizationProcessorResult, level);
         Double phoneActivityResult = phoneActivityProcessor.process();
 
-        Log.i(TAG,"phoneActivityResult: " + phoneActivityResult);
-        return Map.of("phoneLocalizationProcessorResult", phoneLocalizationProcessorResult,
-                "phoneActivityResult", phoneActivityResult);
+        Log.i(TAG,String.format(FORMAT, PHONE_ACTIVITY_RESULT, phoneActivityResult));
+        return Map.of(PHONE_LOCALIZATION_PROCESSOR_RESULT, phoneLocalizationProcessorResult,
+                PHONE_ACTIVITY_RESULT, phoneActivityResult);
     }
 
-    public Double getPhoneLocalizationResult() throws IOException {
-        try {
-            List<Double> mostCommonCoordinates = extractor.extractMostCommonCoordinates();
-            if (mostCommonCoordinates == null) {
-                return 1.0;
-            }
-            List<Double> profileCoordinates = getProfileCoordinates(context);
-            Double phoneLocalizationProcessorResult;
-            PhoneLocalizationProcessor phoneLocalizationProcessor = new PhoneLocalizationProcessor(mostCommonCoordinates, profileCoordinates);
-            phoneLocalizationProcessorResult = phoneLocalizationProcessor.process();
-            Log.i(TAG,"phoneLocalizationProcessorResult: " + phoneLocalizationProcessorResult);
-            return phoneLocalizationProcessorResult;
-        } catch (ResourceNotFoundException e) {
-            Log.e(TAG, "Profile has no address");
-            return 0.0;
+    public Double getPhoneLocalizationResult() throws IOException, ResourceNotFoundException {
+        List<Double> mostCommonCoordinates = extractor.extractMostCommonCoordinates();
+        if (mostCommonCoordinates == null) {
+            return 1.0;
         }
+        List<Double> profileCoordinates = getProfileCoordinates(context);
+        Double phoneLocalizationProcessorResult;
+        PhoneLocalizationProcessor phoneLocalizationProcessor = new PhoneLocalizationProcessor(mostCommonCoordinates, profileCoordinates);
+        phoneLocalizationProcessorResult = phoneLocalizationProcessor.process();
+        Log.i(TAG,String.format(FORMAT, PHONE_LOCALIZATION_PROCESSOR_RESULT, phoneLocalizationProcessorResult));
+        return phoneLocalizationProcessorResult;
     }
 
     public Map<String, Double> getFitbitResults(ExpertSystemLevel level) {
@@ -108,25 +106,30 @@ public class ExpertSystem {
             userFeelingsResult = userFeelingsProcessor.process();
         }
 
-        Log.i(TAG,"userFeelingsResult: " + userFeelingsResult);
-        return Map.of("userFeelingsResult", userFeelingsResult);
+        Log.i(TAG,String.format(FORMAT, USER_FEELINGS_RESULT, userFeelingsResult));
+        return Map.of(USER_FEELINGS_RESULT, userFeelingsResult);
     }
 
     private Double calculateFinalResult(Map<String, Double> phoneActivityResults,
                                         Map<String, Double> fitbitResults,
                                         Map<String, Double> userActivityResults) {
-        double sum = phoneActivityResults.values().stream().mapToDouble(value -> value).sum();  // 1-5 1-3
-        sum += fitbitResults.values().stream().mapToDouble(value -> value).sum();               // 1-3 1-3
-        sum += userActivityResults.values().stream().mapToDouble(value -> value).sum();         // 1-4
+        double sum = phoneActivityResults.values().stream().mapToDouble(value -> value).sum();
+        sum += fitbitResults.values().stream().mapToDouble(value -> value).sum();
+        sum += userActivityResults.values().stream().mapToDouble(value -> value).sum();
         return sum;
     }
 
     private List<Double> getProfileCoordinates(Context context) throws IOException, ResourceNotFoundException {
-        Profile profile = database.profileDao().get().orElseThrow(ResourceNotFoundException::new);
+        Profile profile = database.profileDao().get().get();
         Geocoder geocoder = new Geocoder(context);
-        List<Address> location = geocoder.getFromLocationName(profile.getHomeAddress().getStreetAddress(), 1);
-        double latitude = location.get(0).getLatitude();
-        double longitude = location.get(0).getLongitude();
-        return List.of(latitude, longitude);
+        if (profile.getHomeAddress() == null) {
+            throw new ResourceNotFoundException(TAG, "Profile has no address");
+        }
+        List<Address> location = geocoder.getFromLocationName(profile.getHomeAddress().toSimpleString(), 1);
+        if (location.isEmpty()) {
+            return Collections.emptyList();
+        }
+        Address address = location.get(0);
+        return List.of(address.getLatitude(), address.getLongitude());
     }
 }
